3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

lib/collect.pl.in: can now use lines like "attacktype fire electricity poison" instead
 of hard to remember numbers. Numbers are still supported, you can even mix both.
Ryo 2005-09-28

server/spell_effect.c: In recharge() verify that the object to charge is in
   fact a wand or staff.
Andreas Kirschbaum 2005-09-27

Changed quest behaviour, now uses its own archetypes. Can change npc/magic ear
 text based on quest status.
Warning: not totally tested. Quest start/end works, rest needs some tweaks & fixes.
common/quest.c: new functions, some cleaning.
doc/Developers/quest: update (partially).
include/define.h: new item types.
include/libproto.h: new definitions.
server/c_misc.c: update.
server/monster.c: take into account quest overrides.
server/time.c: markers now start/end tasks if needed.
Ryo 2009-09-25

server/c_party.c - fix another party list corruption bug, and a couple of
possible infinite loops
Brendan Lally 2005-09-25

Clean some compilation warnings.
 common/map.c: remove unused variable.
 common/readable.c: strlen returns size_t.
 include/object.h: objectlink id should be tag_t since it's the item's "count" field.
 server/c_misc.c: strlen returns size_t.
 server/c_object.c: strlen returns size_t.
 server/c_party.c: remove_party returns void, value not used anyway. Fordward declaration.
 server/c_wiz.c: settings.worldmaptiles[x|y] is uint32.
 server/gods.c: strlen returns size_t.
 server/hiscore.c: maxchar is const.
 server/skill_util.c: strlen_returns size_t.
Ryo 2005-09-25

include/player.h sproto.h
server/attack.c c_party.c player.c
Fix several bugs in patch #1194964, including one that caused segfaults