@@ -17,6 +17,11 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
 
+plugin/plugin_python.c: added CF[SG]etWeightLimit.
+plugin/include/plugin_python.h: function prototypes.
+server/plugins.c: update player inventory if item teleporter from that.
+Ryo 2005-09-30
+
 lib/collect.pl.in: can now use lines like "attacktype fire electricity poison" instead
  of hard to remember numbers. Numbers are still supported, you can even mix both.
 Ryo 2005-09-28
